⚡conf: general update to the config file

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -35,6 +36,9 @@ yarn-error.log*
 next-env.d.ts
 # compiled output
 /dist
+
+#vscode
+/.vscode
 
 # Logs
 logs
