--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "js-yaml": "^4.1.0",
+    "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -51,6 +52,7 @@
     "@types/js-yaml": "^4.0.6",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
