➕ lib: add multer and cloudinary lib to upload img

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,10 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "js-yaml": "^4.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -48,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.6",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.12",
