--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.4.3",
