--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.8",
     "lucide-react": "^0.292.0",
-    "next": "13.4.19",
+    "next": "^14.0.4",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
