--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,7 +35,13 @@
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.3",
