--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:create": "yarn typeorm -- migration:create ./src/migrations/$npm_config_name",
-    "migration:generate": "yarn build && yarn typeorm migration:generate ./src/migrations/$npm_config_name -d ./typeOrm.config.ts",
+    "migration:create": "yarn typeorm -- migration:create ./src/migrations/$name",
+    "migration:generate": "yarn build && yarn typeorm migration:generate ./src/migrations/$name -d ./typeOrm.config.ts",
     "migration:run": "yarn typeorm migration:run -d ./typeOrm.config.ts"
   },
   "dependencies": {
