--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
