📦 package: add morgan logger to log the requests

--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "js-yaml": "^4.1.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
@@ -54,6 +55,7 @@
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.6",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.11",
