🐳 docker: complete development setup with docker-compose

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@
 
 *.sh
 
+# docker
+docker-compose.yml
+frontend/docker-compose-frontend.yml
+backend/docker-backend-backend.yml
+
 # misc
 .DS_Store
 *.pem
