--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,22 +14,23 @@ RUN \
   else echo "Lockfile not found." && exit 1; \
   fi
 
+# development image, as builder
+FROM base AS dev
+
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+
 
 # build the project
 FROM base AS builder
-
 WORKDIR /app
-
 COPY --from=deps /app/node_modules ./node_modules
-
 COPY . .
-
 RUN yarn build
 
 # production image, as runner
-
 FROM base AS runner
-
 WORKDIR /app
 
 RUN addgroup --system --gid 1001 nodejs
@@ -44,11 +45,8 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
-
 EXPOSE 3000
-
 ENV PORT 3000
-
 ENV HOSTNAME "0.0.0.0"
 
 CMD [ "node", "server.js" ]
