🧹 clean: all unused locals and parameters are cleaned

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,8 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
