⚡ improve: add type safety to the required field in backend

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,7 @@
     "strictNullChecks": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
